--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,112 @@ sniffio==1.3.1
 tqdm==4.67.0
 typing_extensions==4.12.2
 yarl==1.17.1
+annoy~=1.17.3
+
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.2
+aiosignal==1.3.1
+annotated-types==0.7.0
+annoy==1.17.3
+anyio==4.6.2.post1
+async-timeout==4.0.3
+attrs==24.2.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+coloredlogs==15.0.1
+dataclasses-json==0.6.7
+distro==1.9.0
+exceptiongroup==1.2.2
+faiss-cpu==1.9.0
+faiss-gpu==1.7.2
+fastembed==0.4.2
+filelock==3.16.1
+flatbuffers==24.3.25
+frozenlist==1.5.0
+fsspec==2024.10.0
+greenlet==3.1.1
+groq==0.12.0
+grpcio==1.68.0
+grpcio-tools==1.68.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.7
+httpx==0.27.2
+httpx-sse==0.4.0
+huggingface-hub==0.26.2
+humanfriendly==10.0
+hyperframe==6.0.1
+idna==3.10
+Jinja2==3.1.4
+jiter==0.7.1
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.7
+langchain-community==0.3.7
+langchain-core==0.3.19
+langchain-groq==0.2.1
+langchain-openai==0.2.8
+langchain-text-splitters==0.3.2
+langsmith==0.1.143
+loguru==0.7.2
+MarkupSafe==3.0.2
+marshmallow==3.23.1
+mmh3==4.1.0
+mpmath==1.3.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+networkx==3.4.2
+numpy==1.26.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+onnx==1.17.0
+onnxruntime==1.19.2
+openai==1.54.4
+orjson==3.10.11
+packaging==24.2
+pillow==10.4.0
+portalocker==2.10.1
+propcache==0.2.0
+protobuf==5.28.3
+py_rust_stemmers==0.1.3
+pydantic==2.9.2
+pydantic-settings==2.6.1
+pydantic_core==2.23.4
+python-dotenv==1.0.1
+PyYAML==6.0.2
+qdrant-client==1.12.1
+redis==5.2.0
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+safetensors==0.4.5
+scikit-learn==1.5.2
+scipy==1.14.1
+sentence-transformers==3.3.1
+sniffio==1.3.1
+SQLAlchemy==2.0.35
+sympy==1.13.1
+tenacity==9.0.0
+threadpoolctl==3.5.0
+tiktoken==0.8.0
+tokenizers==0.20.3
+torch==2.5.1
+tqdm==4.67.0
+transformers==4.46.3
+triton==3.1.0
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+urllib3==2.2.3
+yarl==1.17.2
