--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiofiles==24.1.0
 aiogram==3.15.0
 aiohappyeyeballs==2.4.3
+sentence-transformers
 aiohttp==3.10.11
 aiosignal==1.3.1
 annotated-types==0.7.0
@@ -37,7 +38,7 @@ marshmallow==3.23.1
 multidict==6.1.0
 mypy-extensions==1.0.0
 numpy==1.26.4
-openai==1.55.0
+openai~=1.55.3
 orjson==3.10.11
 packaging==24.2
 propcache==0.2.0
@@ -59,3 +60,5 @@ typing-inspect==0.9.0
 typing_extensions==4.12.2
 urllib3==2.2.3
 yarl==1.17.2
+
+chromadb~=0.5.23
