--- a/requirements.txt
+++ b/requirements.txt
@@ -6,25 +6,32 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 annoy==1.17.3
 anyio==4.6.2.post1
+argcomplete==1.10.3
 asgiref==3.8.1
 async-timeout==4.0.3
 asyncpg==0.30.0
 attrs==24.2.0
 backoff==2.2.1
 bcrypt==4.2.1
+beautifulsoup4==4.8.2
 build==1.2.2.post1
 cachetools==5.5.0
 certifi==2024.8.30
+chardet==3.0.4
 charset-normalizer==3.4.0
 chroma-hnswlib==0.7.6
 chromadb==0.5.23
 click==8.1.7
 coloredlogs==15.0.1
+compressed-rtf==1.0.6
 dataclasses-json==0.6.7
 Deprecated==1.2.15
 distro==1.9.0
+docx2txt==0.8
 durationpy==0.9
+ebcdic==1.1.1
 exceptiongroup==1.2.2
+extract-msg==0.28.7
 fastapi==0.115.6
 filelock==3.16.1
 flatbuffers==24.3.25
@@ -44,6 +51,7 @@ httpx-sse==0.4.0
 huggingface-hub==0.26.3
 humanfriendly==10.0
 idna==3.10
+IMAPClient==2.1.0
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
 Jinja2==3.1.4
@@ -59,6 +67,7 @@ langchain-groq==0.2.1
 langchain-openai==0.2.9
 langchain-text-splitters==0.3.2
 langsmith==0.1.144
+lxml==5.3.0
 magic-filter==1.0.12
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -69,6 +78,7 @@ monotonic==1.6
 mpmath==1.3.0
 multidict==6.1.0
 mypy-extensions==1.0.0
+netaddr==1.3.0
 networkx==3.4.2
 numpy==1.26.4
 nvidia-cublas-cu12==12.4.5.8
@@ -84,6 +94,7 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 oauthlib==3.2.2
+olefile==0.47
 onnxruntime==1.20.1
 openai==1.55.3
 opentelemetry-api==1.28.2
@@ -99,12 +110,14 @@ opentelemetry-util-http==0.49b2
 orjson==3.10.11
 overrides==7.7.0
 packaging==24.2
+pdfminer.six==20191110
 pillow==11.0.0
 posthog==3.7.4
 propcache==0.2.0
 protobuf==5.29.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycryptodome==3.21.0
 pydantic==2.9.2
 pydantic-settings==2.6.1
 pydantic_core==2.23.4
@@ -113,6 +126,7 @@ PyPika==0.48.9
 pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-pptx==0.6.23
 PyYAML==6.0.2
 redis==5.2.0
 regex==2024.11.6
@@ -128,10 +142,15 @@ sentence-transformers==3.3.1
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+SpeechRecognition==3.8.1
 SQLAlchemy==2.0.35
 starlette==0.41.3
 sympy==1.13.1
+telegraph==2.2.0
 tenacity==9.0.0
+textract==1.6.5
 threadpoolctl==3.5.0
 tiktoken==0.8.0
 tokenizers==0.20.3
@@ -143,6 +162,7 @@ triton==3.1.0
 typer==0.15.1
 typing-inspect==0.9.0
 typing_extensions==4.12.2
+tzlocal==5.2
 urllib3==2.2.3
 uvicorn==0.32.1
 uvloop==0.21.0
@@ -150,9 +170,8 @@ watchfiles==1.0.3
 websocket-client==1.8.0
 websockets==14.1
 wrapt==1.17.0
+xlrd==1.2.0
+XlsxWriter==3.2.2
 yarl==1.18.0
+yookassa==3.4.3
 zipp==3.21.0
-
-yookassa~=3.4.3
-telegraph~=2.2.0
-textract~=1.6.5
