--- a/requirements.txt
+++ b/requirements.txt
@@ -1,177 +1,15 @@
-aiofiles==24.1.0
-aiogram==3.15.0
-aiohappyeyeballs==2.4.3
-aiohttp==3.10.11
-aiosignal==1.3.1
-annotated-types==0.7.0
-annoy==1.17.3
-anyio==4.6.2.post1
-argcomplete==1.10.3
-asgiref==3.8.1
-async-timeout==4.0.3
+aiogram==3.22.0
 asyncpg==0.30.0
-attrs==24.2.0
-backoff==2.2.1
-bcrypt==4.2.1
-beautifulsoup4==4.8.2
-build==1.2.2.post1
-cachetools==5.5.0
-certifi==2024.8.30
-chardet==3.0.4
-charset-normalizer==3.4.0
-chroma-hnswlib==0.7.6
-chromadb==0.5.23
-click==8.1.7
-coloredlogs==15.0.1
-compressed-rtf==1.0.6
-dataclasses-json==0.6.7
-Deprecated==1.2.15
-distro==1.9.0
-docx2txt==0.8
-durationpy==0.9
-ebcdic==1.1.1
-exceptiongroup==1.2.2
-extract-msg==0.28.7
-fastapi==0.115.6
-filelock==3.16.1
-flatbuffers==24.3.25
-frozenlist==1.5.0
-fsspec==2024.10.0
-gigachat==0.1.36
-google-auth==2.36.0
-googleapis-common-protos==1.66.0
-greenlet==3.1.1
-groq==0.12.0
-grpcio==1.68.1
-h11==0.14.0
-httpcore==1.0.7
-httptools==0.6.4
-httpx==0.27.2
-httpx-sse==0.4.0
-huggingface-hub==0.26.3
-humanfriendly==10.0
-idna==3.10
-IMAPClient==2.1.0
-importlib_metadata==8.5.0
-importlib_resources==6.4.5
-Jinja2==3.1.4
-jiter==0.8.0
-joblib==1.4.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-kubernetes==31.0.0
-langchain==0.3.7
-langchain-community==0.3.7
-langchain-core==0.3.19
-langchain-groq==0.2.1
-langchain-openai==0.2.9
-langchain-text-splitters==0.3.2
-langsmith==0.1.144
-lxml==5.3.0
-magic-filter==1.0.12
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.23.1
-mdurl==0.1.2
-mmh3==5.0.1
-monotonic==1.6
-mpmath==1.3.0
-multidict==6.1.0
-mypy-extensions==1.0.0
-netaddr==1.3.0
-networkx==3.4.2
-numpy==1.26.4
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
-oauthlib==3.2.2
-olefile==0.47
-onnxruntime==1.20.1
-openai==1.55.3
-opentelemetry-api==1.28.2
-opentelemetry-exporter-otlp-proto-common==1.28.2
-opentelemetry-exporter-otlp-proto-grpc==1.28.2
-opentelemetry-instrumentation==0.49b2
-opentelemetry-instrumentation-asgi==0.49b2
-opentelemetry-instrumentation-fastapi==0.49b2
-opentelemetry-proto==1.28.2
-opentelemetry-sdk==1.28.2
-opentelemetry-semantic-conventions==0.49b2
-opentelemetry-util-http==0.49b2
-orjson==3.10.11
-overrides==7.7.0
-packaging==24.2
-pdfminer.six==20191110
-pillow==11.0.0
-posthog==3.7.4
-propcache==0.2.0
-protobuf==5.29.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycryptodome==3.21.0
-pydantic==2.9.2
-pydantic-settings==2.6.1
-pydantic_core==2.23.4
-Pygments==2.18.0
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-pptx==0.6.23
-PyYAML==6.0.2
-redis==5.2.0
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==13.9.4
-rsa==4.9
-safetensors==0.4.5
-scikit-learn==1.5.2
-scipy==1.14.1
-sentence-transformers==3.3.1
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.6
-SpeechRecognition==3.8.1
-SQLAlchemy==2.0.35
-starlette==0.41.3
-sympy==1.13.1
+chromadb==1.0.20
+langchain_community==0.3.29
+langchain_core==0.3.75
+langchain_groq==0.3.7
+langchain_openai==0.3.32
+langchain_text_splitters==0.3.10
+openai==1.102.0
+python-dotenv==1.1.1
+Requests==2.32.5
 telegraph==2.2.0
-tenacity==9.0.0
 textract==1.6.5
-threadpoolctl==3.5.0
-tiktoken==0.8.0
-tokenizers==0.20.3
-tomli==2.2.1
-torch==2.5.1
-tqdm==4.67.0
-transformers==4.46.3
-triton==3.1.0
-typer==0.15.1
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzlocal==5.2
-urllib3==2.2.3
-uvicorn==0.32.1
-uvloop==0.21.0
-watchfiles==1.0.3
-websocket-client==1.8.0
-websockets==14.1
-wrapt==1.17.0
-xlrd==1.2.0
-XlsxWriter==3.2.2
-yarl==1.18.0
-yookassa==3.4.3
-zipp==3.21.0
+yookassa==3.6.0
+redis==6.4.0
